tests/data/libsvm/invalid/missing_index_value.libsvm
1 1:-1.11 :-2.90 3:42.0
0 1:-0.52 2:-0.33